@@ -4659,3 +4659,5 @@ Changelog for GXemul:
 		using the new framework.
 20180418	Adding dummy skeletons for a Cyclone/VH (i960VH) evaluation
 		board, and the HP 700/RX X-terminal (i960CA).
+20180419	Implementing basic disassembly of some i960 instructions
+		(only the CTRL group so far).
